fix: sider-collapsed extra padding

--- a/src/global.less
+++ b/src/global.less
@@ -35,7 +35,7 @@ body,
   min-height: 100vh;
 }
 
-.ant-pro-sider.ant-layout-sider.ant-pro-sider-fixed {
+.ant-pro-sider:not(.ant-layout-sider-collapsed) {
   left: unset;
   padding: 20px;
 }
@@ -44,7 +44,7 @@ body,
 .ant-menu-item a:hover,
 .ant-menu-item-selected a,
 .ant-menu-submenu-selected {
-  color: #542EE0 !important;
+  color: #542ee0 !important;
 }
 
 .ant-pro-sider-logo {
